# RED4ext

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
cmake/: ConfigureAndIncludeFmt.cmake  ConfigureAndIncludeRED4extSdk.cmake  ConfigureAndIncludeRedscript.cmake  ConfigureAndIncludeSimdjson.cmake  ConfigureAndIncludeSpdlog.cmake  ConfigureAndIncludeToml11.cmake  ConfigureAndIncludeTslOrderedMap.cmake  ConfigureAndIncludeWil.cmake
docs/: README.md  how-to-create-a-new-plugin.md  how-to-install-plugins.md  how-to-install.md
example/: Main.cpp  README.md  premake5.lua
premake/: generate_projects.bat  premake5.lua
premake/extensions/: red4ext.lua  redext.lua
premake/extensions/red4ext/: paths.lua  project.lua  version.lua
premake/extensions/redext/: paths.lua  project.lua
premake/modules/: detours.lua  fmt.lua  renhook.lua  spdlog.lua  zycore.lua  zydis.lua
scripts/: find_patterns.py  patterns.py
src/: CMakeLists.txt
src/dll/: Addresses.cpp  Addresses.generated.hpp  Addresses.hpp  App.cpp  App.hpp  CMakeLists.txt  Config.cpp  DetourTransaction.cpp  DetourTransaction.hpp  DevConsole.cpp  DevConsole.hpp  GameStateHook.hpp  Hook.hpp  Image.cpp  Main.cpp  MemoryProtection.cpp  MemoryProtection.hpp  Paths.cpp  Paths.hpp  PluginBase.cpp  ScriptCompiler.cpp  ScriptCompiler.hpp  ScriptValidationError.cpp  ScriptValidationError.hpp  SourceRefRepository.cpp  SourceRefRepository.hpp  Utils.cpp  Utils.hpp  Version.hpp.in  stdafx.hpp
src/dll/Hooks/: AssertionFailed.cpp  AssertionFailed.hpp  CGameApplication.cpp  CollectSaveableSystems.cpp  CollectSaveableSystems.hpp  ExecuteProcess.cpp  ExecuteProcess.hpp  InitScripts.cpp  InitScripts.hpp  LoadScripts.cpp  LoadScripts.hpp  Main_Hooks.cpp  Main_Hooks.hpp  RedmodCompilation.cpp  RedmodCompilation.hpp  RedscriptCompilation.cpp  RedscriptCompilation.hpp  ReportErrorCode.cpp  ReportErrorCode.hpp  SessionActive_ReportErrorCode.cpp  SessionActive_ReportErrorCode.hpp  ValidateScripts.cpp  ValidateScripts.hpp  gsmState_SessionActive.cpp  gsmState_SessionActive.hpp
src/dll/ScriptCompiler/: ScriptCompilerFailure.cpp  ScriptCompilerFailure.hpp  ScriptCompilerOutput.cpp  ScriptCompilerOutput.hpp  ScriptCompilerSettings.cpp  ScriptCompilerSettings.hpp  ScriptCompilerSourceRef.cpp  ScriptCompilerSourceRef.hpp
src/dll/States/: BaseInitializationState.cpp  InitializationState.cpp  RunningState.hpp
src/dll/Systems/: ESystemType.hpp  HookingSystem.cpp  ISystem.hpp  LoggerSystem.cpp  LoggerSystem.hpp  PluginSystem.cpp  PluginSystem.hpp  ScriptCompilationSystem.cpp  ScriptCompilationSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  StateSystem.cpp  StateSystem.hpp
src/dll/v0/: Funcs.cpp  Funcs.hpp  Plugin.cpp  Plugin.hpp
src/loader/: CMakeLists.txt  Main.cpp  Main.def  Resource.rc  d3d1x.cpp  stdafx.hpp
src/loader/Proxies/: Xinput.cpp  Xinput.hpp  winmm.cpp  winmm.hpp
src/playground/: CMakeLists.txt  Main.cpp  stdafx.hpp
src/red4ext/: App.cpp  App.hpp  CMakeLists.txt
src/red4ext.dll/: Addresses.hpp  Api.cpp  Api.hpp  App.cpp  App.hpp  CMakeLists.txt  Config.cpp  Config.hpp  DetourThreadsUpdater.cpp  DetourThreadsUpdater.hpp  DetourTransaction.cpp  DevConsole.cpp  DevConsole.hpp  GameStateHook.hpp  Hook.hpp  HookingManager.cpp  HookingManager.hpp  Image.cpp  Image.hpp  Main.cpp  MemoryProtection.cpp  Paths.cpp  Paths.hpp  Patterns.cpp  Patterns.hpp  Plugin.cpp  Plugin.hpp  PluginBase.cpp  PluginBase.hpp  PluginManager.cpp  PluginManager.hpp  PluginsManager.cpp  PluginsManager.hpp  REDhook.hpp  Resource.rc  TrampolinesManager.cpp  TrampolinesManager.hpp  Utils.cpp  Utils.hpp  premake5.lua  (+1 more)
src/red4ext.dll/Exports/: Exports.hpp  Log.cpp  Patterns.cpp
src/red4ext.dll/Hooks/: CBaseInitializationState.cpp  CBaseInitializationState.hpp  CGameApplication.cpp  CGameApplication.hpp  CInitializationState.cpp  CInitializationState.hpp  CRunningState.cpp  CRunningState.hpp  CShutdownState.cpp  CShutdownState.hpp  Main.cpp  Main.hpp  Main_Hooks.cpp
src/red4ext.dll/REDs/: REDhook.hpp
src/red4ext.dll/States/: BaseInitializationState.cpp  BaseInitializationState.hpp  InitializationState.cpp  InitializationState.hpp  RunningState.cpp  ShutdownState.cpp  ShutdownState.hpp
src/red4ext.dll/Systems/: HookingSystem.cpp  HookingSystem.hpp  LoggerSystem.cpp  LoggerSystem.hpp  PluginSystem.cpp  PluginSystem.hpp  StateSystem.cpp  StateSystem.hpp
src/red4ext.dll/v0/: Funcs.cpp  Funcs.hpp  Hooking.cpp  Hooking.hpp  Logger.cpp  Logger.hpp  Plugin.cpp  Plugin.hpp  RED4ext.cpp  RED4ext.hpp  Trampoline.cpp  Trampoline.hpp
src/red4ext.dll/v1/: Hooking.cpp  Hooking.hpp  Plugin.cpp  Plugin.hpp  RED4ext.cpp  RED4ext.hpp  Trampoline.cpp  Trampoline.hpp
src/red4ext.loader/: App.cpp  App.hpp  Main.cpp  Main.def  Registry.hpp  Resource.rc  VersionDll.cpp  VersionDll.hpp  premake5.lua  pwrprof.cpp  pwrprof.hpp  stdafx.hpp
src/red4ext.loader/Launchers/: BaseLauncher.cpp  BaseLauncher.hpp  CustomLauncher.cpp  CustomLauncher.hpp  (+4 more)
src/red4ext.playground/: App.cpp  App.hpp  Main.cpp  premake5.lua  stdafx.hpp
src/red4ext.sdk/: premake5.lua
src/redext.dll/: App.cpp  App.hpp  DevConsole.cpp  DevConsole.hpp  Main.cpp  PluginManager.cpp  PluginManager.hpp  premake5.lua  stdafx.hpp
src/redext.loader/: App.cpp  App.hpp  Main.cpp  Registry.hpp  premake5.lua  stdafx.cpp
src/redext.playground/: App.cpp  App.hpp  Main.cpp  premake5.lua  stdafx.hpp
src/redext.sdk/: premake5.lua
(+57 files in other folders)
